--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -74,7 +74,7 @@
                   <a class="small" href="forgot-password.html">Esqueceu a Senha?</a>
                 </div>
                 <div class="text-center">
-                  <a class="small" href="register.html">Criar Nova Conta!</a>
+                  <a class="small" [routerLink]="linkParaNovoUsuario()">Criar Nova Conta!</a>
                 </div>
               </div>
             </div>
