Criacao de esqueceu-senha e correções de rotas -Foi criado o componente esqueceu senha e configurado suas rotas -Foi corrigido a rota inicial para a tela de login

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -71,7 +71,7 @@
                 </form>
                 <hr>
                 <div class="text-center">
-                  <a class="small" href="forgot-password.html">Esqueceu a Senha?</a>
+                  <a class="small" [routerLink]="linkParaEsquecerSenha()">Esqueceu a Senha?</a>
                 </div>
                 <div class="text-center">
                   <a class="small" [routerLink]="linkParaNovoUsuario()">Criar Nova Conta!</a>
