--- a/src/app/components/usuario/novo-usuario/novo-usuario.component.html
+++ b/src/app/components/usuario/novo-usuario/novo-usuario.component.html
@@ -34,31 +34,42 @@
         <div class="col-lg-7">
           <div class="p-5">
             <div class="text-center">
-              <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
+              <h1 class="h4 text-gray-900 mb-4">Crie uma nova Conta!</h1>
             </div>
             <form class="user">
               <div class="form-group row">
                 <div class="col-sm-6 mb-3 mb-sm-0">
-                  <input type="text" class="form-control form-control-user" id="exampleFirstName"
-                         placeholder="First Name">
+                  <input type="text" class="form-control form-control-user" id="nome"
+                         placeholder="Nome">
                 </div>
                 <div class="col-sm-6">
-                  <input type="text" class="form-control form-control-user" id="exampleLastName"
-                         placeholder="Last Name">
+                  <input type="text" class="form-control form-control-user" id="sobrenome"
+                         placeholder="Sobrenome">
+                </div>
+
+              </div>
+              <div class="form-group row">
+                <div class="col-sm-6">
+                  <input type="text" class="form-control form-control-user" id="ddd"
+                         placeholder="DDD">
+                </div>
+                <div class="col-sm-6">
+                  <input type="text" class="form-control form-control-user" id="numero"
+                         placeholder="Número">
                 </div>
               </div>
               <div class="form-group">
                 <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                       placeholder="Email Address">
+                       placeholder="Email">
               </div>
               <div class="form-group row">
                 <div class="col-sm-6 mb-3 mb-sm-0">
                   <input type="password" class="form-control form-control-user"
-                         id="exampleInputPassword" placeholder="Password">
+                         id="senha" placeholder="Senha">
                 </div>
                 <div class="col-sm-6">
-                  <input type="password" class="form-control form-control-user"
-                         id="exampleRepeatPassword" placeholder="Repeat Password">
+                  <input type="text" class="form-control form-control-user" id="cpf"
+                         placeholder="CPF">
                 </div>
               </div>
               <a href="login.html" class="btn btn-primary btn-user btn-block">
@@ -66,18 +77,18 @@
               </a>
               <hr>
               <a href="index.html" class="btn btn-google btn-user btn-block">
-                <i class="fab fa-google fa-fw"></i> Register with Google
+                <i class="fab fa-google fa-fw"></i> Registrar com Google
               </a>
               <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
+                <i class="fab fa-facebook-f fa-fw"></i> Registrar com Facebook
               </a>
             </form>
             <hr>
             <div class="text-center">
-              <a class="small" href="forgot-password.html">Forgot Password?</a>
+              <a class="small" [routerLink]="linkParaEsquecerSenha()">Esqueceu a Senha?</a>
             </div>
             <div class="text-center">
-              <a class="small" href="login.html">Already have an account? Login!</a>
+              <a class="small" [routerLink]="linkParaLogin()">Ja tem uma conta? Faça login!</a>
             </div>
           </div>
         </div>
