--- a/src/app/components/esqueceu-a-senha/esqueceu-a-senha.component.html
+++ b/src/app/components/esqueceu-a-senha/esqueceu-a-senha.component.html
@@ -41,13 +41,13 @@
                 <div class="text-center">
                   <h1 class="h4 text-gray-900 mb-2">Esqueceu sua senha?</h1>
                   <p class="mb-4">Vamos lá, acontece. Apenas insira seu email cadastrado
-                    e nós iremis enviar para voce um link para resetar sua senha!</p>
+                    e nós iremos enviar para você um link para resetar sua senha!</p>
                 </div>
                 <form class="user">
                   <div class="form-group">
                     <input type="email" class="form-control form-control-user"
                            id="exampleInputEmail" aria-describedby="emailHelp"
-                           placeholder="Enter Email Address...">
+                           placeholder="Insira seu email">
                   </div>
                   <a href="login.html" class="btn btn-primary btn-user btn-block">
                     Resetar Senha
