--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SB Admin 2 - Login</title>
+  <title>Hotel Pet Login</title>
 
   <!-- Custom fonts for this template-->
   <link href="/hotel-pet-2/src/assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
