--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,7 +22,7 @@
     <!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
       <a class="nav-link collapsed" href="#">
-<!--        <i class="fas fa-fw fa-folder"></i>-->
+        <!--        <i class="fas fa-fw fa-folder"></i>-->
         <span [routerLink]="linkNovoCuidador()">Torne-se um cuidador</span>
       </a>
     </li>
@@ -32,7 +32,7 @@
     <!-- Sidebar Message -->
     <div class="sidebar-card d-none d-lg-flex">
       <img class="sidebar-card-illustration mb-2" src="/assets/img/dog_2.jpg" alt="...">
-      <p class="text-center mb-2"><strong>Hotel Pet Pro</strong> Seja um membro premium e tenha  mais beneficios!</p>
+      <p class="text-center mb-2"><strong>Hotel Pet Pro</strong> Seja um membro premium e tenha mais beneficios!</p>
       <a class="btn btn-success btn-sm" href="https://startbootstrap.com/theme/sb-admin-pro">Adquira uma Plano!</a>
     </div>
 
@@ -167,7 +167,8 @@
                 </div>
                 <div class="font-weight-bold">
                   <div class="text-truncate">Hi there! I am wondering if you can help me with a
-                    problem I've been having.</div>
+                    problem I've been having.
+                  </div>
                   <div class="small text-gray-500">Emily Fowler · 58m</div>
                 </div>
               </a>
@@ -179,7 +180,8 @@
                 </div>
                 <div>
                   <div class="text-truncate">I have the photos that you ordered last month, how
-                    would you like them sent to you?</div>
+                    would you like them sent to you?
+                  </div>
                   <div class="small text-gray-500">Jae Chun · 1d</div>
                 </div>
               </a>
@@ -191,7 +193,8 @@
                 </div>
                 <div>
                   <div class="text-truncate">Last month's report looks great, I am very happy with
-                    the progress so far, keep up the good work!</div>
+                    the progress so far, keep up the good work!
+                  </div>
                   <div class="small text-gray-500">Morgan Alvarez · 2d</div>
                 </div>
               </a>
@@ -203,7 +206,8 @@
                 </div>
                 <div>
                   <div class="text-truncate">Am I a good boy? The reason I ask is because someone
-                    told me that people say this to all dogs, even if they aren't good...</div>
+                    told me that people say this to all dogs, even if they aren't good...
+                  </div>
                   <div class="small text-gray-500">Chicken the Dog · 2w</div>
                 </div>
               </a>
@@ -261,68 +265,89 @@
 
         <!-- Content Row -->
 
+      </div>
+
+      <div class="row">
+
+        <div class="col-lg-6">
+
+          <!-- Circle Buttons -->
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+              <h6 class="m-0 font-weight-bold text-primary">Mateus Rocha Pereira</h6>
+            </div>
+            <div class="card-body">
+              <p>307 Norte Alameda 20 lote 62</p>
+              <p>Cachorro</p>
+              <p>25 kg</p>
+              <p>90cm</p>
+              <p>Todos</p>
+            </div>
           </div>
-
-
-      <!-- /.container-fluid -->
-
-    </div>
-    <!-- End of Main Content -->
-
-    <!-- Footer -->
-    <footer class="sticky-footer bg-white">
-      <div class="container my-auto">
-        <div class="copyright text-center my-auto">
-          <span>Copyright &copy; Your Website 2021</span>
         </div>
       </div>
-    </footer>
-    <!-- End of Footer -->
+      <!-- Final cuidador 1 -->
 
-  </div>
-  <!-- End of Content Wrapper -->
+      <div class="row">
 
-</div>
-<!-- End of Page Wrapper -->
+        <div class="col-lg-6">
 
-<!-- Scroll to Top Button-->
-<a class="scroll-to-top rounded" href="#page-top">
-  <i class="fas fa-angle-up"></i>
-</a>
+          <!-- Circle Buttons -->
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+              <h6 class="m-0 font-weight-bold text-primary">Felipe Rocha</h6>
+            </div>
+            <div class="card-body">
+              <p>307 Norte Alameda 20 lote 62</p>
+              <p>Gato</p>
+              <p>Até 25 kg</p>
+              <p>40 cm</p>
+              <p>Vira lata</p>
 
-<!-- Logout Modal-->
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-     aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-      <div class="modal-footer">
-        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-        <a class="btn btn-primary" href="login.html">Logout</a>
+<!--      final cuidador 2-->
+
+      <!-- Scroll to Top Button-->
+      <a class="scroll-to-top rounded" href="#page-top">
+        <i class="fas fa-angle-up"></i>
+      </a>
+
+      <!-- Logout Modal-->
+      <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+           aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">×</span>
+              </button>
+            </div>
+            <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+            <div class="modal-footer">
+              <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+              <a class="btn btn-primary" href="login.html">Logout</a>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</div>
 
-<!-- Bootstrap core JavaScript-->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <!-- Bootstrap core JavaScript-->
+      <script src="vendor/jquery/jquery.min.js"></script>
+      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-<!-- Core plugin JavaScript-->
-<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+      <!-- Core plugin JavaScript-->
+      <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
-<!-- Custom scripts for all pages-->
-<script src="js/sb-admin-2.min.js"></script>
+      <!-- Custom scripts for all pages-->
+      <script src="js/sb-admin-2.min.js"></script>
 
-<!-- Page level plugins -->
-<script src="vendor/chart.js/Chart.min.js"></script>
+      <!-- Page level plugins -->
+      <script src="vendor/chart.js/Chart.min.js"></script>
 
-<!-- Page level custom scripts -->
-<script src="js/demo/chart-area-demo.js"></script>
-<script src="js/demo/chart-pie-demo.js"></script>
+      <!-- Page level custom scripts -->
+      <script src="js/demo/chart-area-demo.js"></script>
+      <script src="js/demo/chart-pie-demo.js"></script>
