Botao alerta cadastro e configurando rota para login -Foi adicionado um alert de confirmação para cadastro -Foi feito o redirecionamento para a tela de login

--- a/src/app/components/usuario/novo-usuario/novo-usuario.component.html
+++ b/src/app/components/usuario/novo-usuario/novo-usuario.component.html
@@ -69,7 +69,7 @@
                          placeholder="Senha">
                 </div>
               </div>
-              <a href="#" class="btn btn-primary btn-user btn-block" (click)="onSubmit()">
+              <a  class="btn btn-primary btn-user btn-block" (click)="onSubmit()">
                 Registar Conta
               </a>
               <hr>
@@ -106,5 +106,6 @@
 <script src="/src/assets/js/sb-admin-2.min.js"></script>
 
 </body>
+<router-outlet></router-outlet>
 
 </html>
