--- a/src/app/components/cuidador/novo-cuidador/novo-cuidador.component.html
+++ b/src/app/components/cuidador/novo-cuidador/novo-cuidador.component.html
@@ -77,7 +77,7 @@
               <a> Dados do Pet</a>
               <div class="form-group row">
                 <div class="col-sm-6">
-                  <input type="text" class="form-control form-control-user" formControlName="tipodePet"
+                  <input type="text" class="form-control form-control-user" formControlName="tipo"
                          placeholder="Gato ou cachorro">
                 </div>
                 <div class="col-sm-6">
