Adicionando metodo busca cuidadores

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -274,9 +274,15 @@
           <!-- Circle Buttons -->
           <div class="card shadow mb-4">
             <div class="card-header py-3">
+              <a [routerLink]="buscaCuidadores()" class="btn btn-primary btn-user btn-block">
+                Listar cuidadores
+              </a>
               <h6 class="m-0 font-weight-bold text-primary">Mateus Rocha Pereira</h6>
             </div>
+
+
             <div class="card-body">
+
               <p>307 Norte Alameda 20 lote 62</p>
               <p>Cachorro</p>
               <p>25 kg</p>
@@ -308,7 +314,7 @@
           </div>
         </div>
       </div>
-<!--      final cuidador 2-->
+      <!--      final cuidador 2-->
 
       <!-- Scroll to Top Button-->
       <a class="scroll-to-top rounded" href="#page-top">
